WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245426
AX ITM: Fix for accessibility/aria-roledescription.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=245426
Summary
AX ITM: Fix for accessibility/aria-roledescription.html in isolated tree mode.
Andres Gonzalez
Reported
2022-09-20 07:43:37 PDT
This test is timeing out in ITM>
Attachments
Patch
(7.78 KB, patch)
2022-09-20 07:46 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-20 07:43:48 PDT
<
rdar://problem/100172155
>
Andres Gonzalez
Comment 2
2022-09-20 07:46:46 PDT
Created
attachment 462472
[details]
Patch
EWS
Comment 3
2022-09-20 18:11:18 PDT
Committed
254704@main
(b98f70eae682): <
https://commits.webkit.org/254704@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462472
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug