AX ITM: Fix for accessibility/aria-roledescription.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=245426 <rdar://problem/100172155>

Reviewed by Chris Fleizach.

We were not updating the isolated tree when the aria-roledescription attribute changes.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleRoleChanged):
(WebCore::AXObjectCache::handleRoleDescriptionChanged):
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):

Canonical link: https://commits.webkit.org/254704@main